# pkg/controller/frpc_controller.go
@@ -1,19 +1,16 @@
 package controller
 
 import (
-	"net/http"
-
 	"github.com/gin-gonic/gin"
 )
 
-type FrpController struct {
+type FrpControllerTemplate struct{}
+
+func NewFrpController() *FrpControllerTemplate {
+	return &FrpControllerTemplate{}
 }
 
-func NewFrpController() *FrpController {
-	return &FrpController{}
-}
-
-func (f *FrpController) Register(engine *gin.Engine) {
+func (f *FrpControllerTemplate) Register(engine *gin.Engine) {
 	engine.GET("/frp/config", f.GetFrpcConfig)
 	engine.POST("/frp/install", f.InstallFrpc)
 }
@@ -27,9 +24,7 @@ func (f *FrpController) Register(engine *gin.Engine) {
 // @Produce		json
 // @Success		200
 // @Router			/frp/config [get]
-func (f *FrpController) GetFrpcConfig(ctx *gin.Context) {
-	ctx.JSON(http.StatusOK, gin.H{"message": "Hello, World!"})
-}
+func (f *FrpControllerTemplate) GetFrpcConfig(ctx *gin.Context) {}
 
 // @Summary		Install Frpc
 // @Description	Install Frpc
@@ -38,6 +33,16 @@ func (f *FrpController) GetFrpcConfig(ctx *gin.Context) {
 // @Produce		json
 // @Success		200
 // @Router			/frp/install [post]
-func (f *FrpController) InstallFrpc(ctx *gin.Context) {
-	ctx.JSON(http.StatusOK, gin.H{"message": "Hello, World!"})
-}
+func (f *FrpControllerTemplate) InstallFrpc(ctx *gin.Context) {}
+
+// @Summary		List Frp Release
+// @Description	List Frp Release
+// @Tags		frp
+// @Accept		json
+// @Produce		json
+// @Success		200
+// @Param		page		query	int false	"page"
+// @Param		pageSize	query	int false	"pageSize"
+// @Param		request	body		models.System true "SystemInfo"
+// @Router		/frp/release [get]
+func (f *FrpControllerTemplate) ListFrpRelease(ctx *gin.Context) {}
