# pkg/models/system.go
@@ -1,0 +1,8 @@
+package models
+
+// System the system info
+// @Description the system info
+type System struct {
+	OS   string
+	Arch string
+}
